--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>大吊雷达服务</title>
+  <title>冰点订制雷达</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://unpkg.com/openlayers@4.6.4/dist/ol.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css" />
@@ -34,7 +34,7 @@
   <div id="app">
     <div class="sidenav" id="navBox" style="display:none;background:rgba(237,206,0,0.9)">
       <section class="section">
-        <h1 class="title STYLE4">大吊雷达服务</h1>
+        <h1 class="title STYLE4">冰点订制雷达</h1>
         <h1 class="title STYLE4">持续更新</h1>
         
         <label class="label">地图选择:</label>
